server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__advocate_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts/tests.rs
expression: section
---
- `task_show(id)`
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)`
- `task_activity_list(id, actor_role?, event_type?, limit?)`
- `memory_read(identifier)`
- `memory_search(query, edge_kinds?, entity_types?, folder?, limit?, task_id?, type?)`
- `memory_list(depth?, folder?, status?, type?)`
- `shell(command, timeout_ms?)`
- `read(file_path, limit?, offset?, project?)`
- `code_search(query, ignore_case?, max_results?, path?, project?)`
- `skill_read(name)`
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)`
- `ci_job_log(job_id?, pr_number?, step?)`
- `ci_artifact(action, artifact?, pr_number?, run_id?)`
- `github_search(query, language?, path?, repo?)`
- `output_view(tool_use_id, limit?, offset?)`
- `output_grep(pattern, tool_use_id, context_lines?)`
- `output_list()`
- `write(content, path)`
- `edit(new_text, old_text, path)`
- `memory_build_context(edge_kinds?, limit?, min_confidence?, query?, task_id?)`
- `memory_write(content, reason, title, type, status?, tags?)`
- `memory_edit(content, identifier, operation, reason, find_text?, section?, type?)`
- `proposal_show(id, fields?, revision_bodies?)`
- `proposal_debate_list(proposal_id)`
- `proposal_debate_append(against_revision_seq, agent_role, body, kind, proposal_id, round, blocking?)`
- `proposal_feedback_disposition(disposition, id, fixed_by_revision?, reason?)`
- `proposal_update(id, acceptance_criteria?, body?, body_format?, status?, superseded_by?, title?)`
- `proposal_ac_set(acceptance_criteria, id)`
- `proposal_block_patch(block_mdx, id, operation, selector, expected_latest_revision_seq?, native_skill_name?, native_skill_version?, note?)`
- `get_block_catalog()`
- `proposal_blocks()`
- `submit_work(commit_title, summary, task_id, evidence_completion?, files_changed?, remaining_concerns?)`
