server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__architect_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts/tests.rs
expression: section
---
- `task_show(id)`
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)`
- `task_activity_list(id, actor_role?, event_type?, limit?)`
- `memory_read(identifier)`
- `memory_search(query, edge_kinds?, entity_types?, folder?, limit?, task_id?, type?)`
- `memory_list(depth?, folder?, status?, type?)`
- `shell(command, timeout_ms?)`
- `read(file_path, limit?, offset?, project?)`
- `code_search(query, ignore_case?, max_results?, path?, project?)`
- `skill_read(name)`
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)`
- `code_graph(operation, project, changed_ranges?, confidence?, context_filter?, current_head?, direction?, edge_filters?, edge_kind?, end_line?, file?, file_filter?, file_glob?, from?, from_glob?, group_by?, key?, kind_filter?, limit?, max_depth?, max_seeds?, min_confidence?, min_size?, mode?, module_glob?, query?, rules?, seed_entries?, seed_sinks?, sort_by?, start_line?, symbols?, target?, tests?, to?, to_glob?, token_budget?, visibility?, window_days?, workspace?)`
- `pr_review_context(changed_ranges, project, boundary_rules?, caps?, hotspots_window_days?, seed_entries?, seed_sinks?)`
- `ci_job_log(job_id?, pr_number?, step?)`
- `ci_artifact(action, artifact?, pr_number?, run_id?)`
- `github_search(query, language?, path?, repo?)`
- `output_view(tool_use_id, limit?, offset?)`
- `output_grep(pattern, tool_use_id, context_lines?)`
- `output_list()`
- `task_create(acceptance_criteria, epic_id, title, blocked_by?, description?, design?, execution_context?, issue_type?, labels?, owner?, parent_id?, priority?, status?)`
- `task_update(id, acceptance_criteria?, blocked_by_add?, blocked_by_remove?, description?, design?, epic_id?, execution_context?, memory_refs_add?, memory_refs_remove?, owner?, priority?, status?, title?)`
- `task_blocked_list(id)`
- `epic_show(id)`
- `epic_update(id, blocked_by_add?, blocked_by_remove?, description?, memory_refs_add?, memory_refs_remove?, status?, title?)`
- `epic_tasks(id, limit?, offset?)`
- `epic_close(id)`
- `epic_create(title, auto_breakdown?, blocked_by?, description?, memory_refs?, project?, proposal_id?, read_sources?)`
- `task_transition(action, id, reason?, replacement_task_ids?)`
- `task_comment_add(body, id)`
- `memory_build_context(edge_kinds?, limit?, min_confidence?, query?, task_id?)`
- `memory_health()`
- `memory_extracted_audit()`
- `memory_broken_links(folder?)`
- `memory_orphans(folder?)`
- `memory_recall_trace()`
- `memory_retrieval_outcomes_report(end, start, timezone, project?, project_id?)`
- `agent_metrics(role)`
- `agent_create(base_role, name, description?, model_preference?, system_prompt_extensions?)`
- `memory_write(content, reason, title, type, status?, tags?)`
- `memory_edit(content, identifier, operation, reason, find_text?, section?, type?)`
- `memory_move(identifier, type, title?)`
- `task_delete_branch(id)`
- `task_archive_activity(id)`
- `task_reset_counters(id)`
- `task_kill_session(id)`
- `submit_work(commit_title, summary, task_id, files_changed?, remaining_concerns?)`
