server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__judge_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts/tests.rs
expression: section
---
- `task_show(id)`
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)`
- `task_activity_list(id, actor_role?, event_type?, limit?)`
- `memory_read(identifier)`
- `memory_search(query, edge_kinds?, entity_types?, folder?, limit?, task_id?, type?)`
- `memory_list(depth?, folder?, status?, type?)`
- `shell(command, timeout_ms?)`
- `read(file_path, limit?, offset?, project?)`
- `code_search(query, ignore_case?, max_results?, path?, project?)`
- `skill_read(name)`
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)`
- `ci_job_log(job_id?, pr_number?, step?)`
- `ci_artifact(action, artifact?, pr_number?, run_id?)`
- `github_search(query, language?, path?, repo?)`
- `output_view(tool_use_id, limit?, offset?)`
- `output_grep(pattern, tool_use_id, context_lines?)`
- `output_list()`
- `memory_build_context(edge_kinds?, limit?, min_confidence?, query?, task_id?)`
- `proposal_show(id, fields?, revision_bodies?)`
- `proposal_debate_list(proposal_id)`
- `proposal_debate_resolve(id, reason?, verdict?)`
- `proposal_debate_append(against_revision_seq, agent_role, body, kind, proposal_id, round, blocking?)`
- `proposal_refinement_demand_evidence(against_revision_seq, expected_findings, insufficient_in_session_research, load_bearing_category, proposal_id, question, round, spec_unknown_anchor, target_subsystem)`
- `proposal_refinement_retry_evidence(failed_transition_id, finding_id)`
- `proposal_refinement_resolve_evidence(finding_id, folding_revision, rationale, validation_result_id)`
- `proposal_refinement_withdraw_evidence(finding_id, folding_revision, rationale, withdrawal_is_non_load_bearing)`
- `task_comment_add(body, id)`
- `submit_decision(decision, task_id, created_tasks?, diagnostic_reason?, directive?, evidence?, exclude_models?, park_dossier?, rationale?, verification_command?)`
