server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__lead_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts.rs
expression: section
---
- `task_show(id)` — Show details of a work item including recent activity and blockers.
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)` — List tasks with optional filters and pagination.
- `task_activity_list(id, actor_role?, event_type?, limit?)` — Query a task's activity log with optional filters. Returns comments, status transitions, verification results, and other events. Use to inspect Lead guidance, reviewer feedback, or verification history.
- `memory_read(identifier)` — Read a note by permalink or title.
- `memory_search(query, folder?, limit?, task_id?, type?)` — Search notes in project memory.
- `memory_list(depth?, folder?, type?)` — List notes in project memory. Returns compact summaries without full content.
- `shell(command, timeout_ms?)` — Execute shell commands in the task worktree. Commands always run from the worktree root.
- `read(file_path, limit?, offset?)` — Read a file with line numbers and pagination. Rejects binary files.
- `skill_read(name)` — Load the full content of an assigned skill by name. Under progressive skill disclosure the system prompt lists each non-required skill's name and description only; call this to fetch the complete skill body on demand. Errors if the name is not an assigned skill.
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)` — Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.
- `ci_job_log(job_id, step?)` — Fetch the full log for a GitHub Actions CI job. When CI fails, the activity log tells you the job_id. Call this tool to see the actual error output. Optionally filter to a specific failed step name. If the output is large, use output_view or output_grep to navigate it.
- `github_search(query, language?, path?, repo?)` — Search GitHub code across public repositories using the GitHub Code Search API. Returns compact, navigable matches with snippets, file paths, URLs, and metadata. Each result has a result_id for reference. Use github_fetch_file to inspect the full file of a promising result.
- `github_fetch_file(path, repo, end_line?, ref?, start_line?)` — Fetch the full contents of a file from a public GitHub repository. Use after github_search to inspect a promising result. Supports optional start_line/end_line for reading specific sections of large files.
- `output_view(tool_use_id, limit?, offset?)` — Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.
- `output_grep(pattern, tool_use_id, context_lines?)` — Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.
- `task_create(acceptance_criteria, epic_id, title, blocked_by?, description?, design?, issue_type?, labels?, owner?, parent_id?, priority?, status?)` — Create a new task under an epic. Agents should use this only when explicitly allowed by their role and task design.
- `task_update(id, acceptance_criteria?, blocked_by_add?, blocked_by_remove?, description?, design?, epic_id?, memory_refs_add?, memory_refs_remove?, owner?, priority?, status?, title?)` — Update task fields and manage blocker relationships. Use blocked_by_add/blocked_by_remove to enforce task sequencing — a task with unresolved blockers will not be dispatched.
- `task_blocked_list(id)` — List tasks that are blocked by the given task. Use before decomposing to check downstream dependents.
- `epic_show(id)` — Show details for an epic by UUID or short ID.
- `epic_update(id, blocked_by_add?, blocked_by_remove?, description?, memory_refs_add?, memory_refs_remove?, status?, title?)` — Update epic fields (title/description/status), memory ref deltas, and epic dependencies (blocked_by) for planner workflows.
- `epic_tasks(id, limit?, offset?)` — List tasks for an epic with pagination.
- `epic_close(id)` — Close an epic. Use when all work is complete and no further waves are needed.
- `task_delete_branch(id)` — Delete the task's git branch, worktree, and paused session so the next worker starts with a clean slate.
- `task_archive_activity(id)` — Soft-delete all activity entries (comments, session errors, rejections) for a task. The worker on the next attempt will only see post-intervention activity.
- `task_reset_counters(id)` — Reset reopen_count and continuation_count to zero. Use when the task has been meaningfully rescoped and old retry history is no longer relevant.
- `task_kill_session(id)` — Kill the paused worker session and delete its saved conversation. The next dispatch will start a fresh session. Unlike task_delete_branch, this preserves the branch and any committed code.
- `request_planner(id, reason)` — Escalate to the Planner when the task requires board-level intervention beyond per-task Lead resolution. Use when the task is mis-shaped, duplicates other work, needs to be split or merged, or has failed multiple Lead interventions. The Planner owns the board and decides whether to reshape the work, dedupe it, or — if the issue requires deeper code-structural reasoning — dispatch an Architect spike. Adds a comment and dispatches the Planner. Your session should end after this call.
- `submit_decision(decision, task_id, created_tasks?, rationale?)` — Submit the Lead intervention decision. This is the ONLY way to end your session and is what applies the board transition — do not call task_transition yourself. Your session ends after this call.
