server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__planner_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts.rs
assertion_line: 1068
expression: section
---
- `task_show(id)` — Show details of a work item including recent activity and blockers.
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)` — List tasks with optional filters and pagination.
- `task_activity_list(id, actor_role?, event_type?, limit?)` — Query a task's activity log with optional filters. Returns comments, status transitions, verification results, and other events. Use to inspect Lead guidance, reviewer feedback, or verification history.
- `memory_read(identifier)` — Read a note by permalink or title.
- `memory_search(query, folder?, limit?, task_id?, type?)` — Search notes in project memory.
- `memory_list(depth?, folder?, type?)` — List notes in project memory. Returns compact summaries without full content.
- `shell(command, timeout_ms?)` — Execute shell commands in the task worktree. Commands always run from the worktree root.
- `read(file_path, limit?, offset?, project?)` — Read a file with line numbers and pagination. Rejects binary files. Pass `project` (UUID or owner/repo slug) to read a file from ANOTHER registered repo — served read-only from its default branch (no checkout); omit it to read your task worktree.
- `code_search(query, ignore_case?, max_results?, path?, project?)` — Search code across registered repos with `git grep` (basic regex). Pass `project` (UUID or owner/repo slug) to search one repo, or omit it (or pass "*") to search ALL registered projects at once — e.g. find every caller of a gRPC service org-wide. Served from each repo's default branch (no checkout). For your own task repo's working tree (your uncommitted changes), use shell grep instead.
- `skill_read(name)` — Load the full content of an assigned skill by name. Under progressive skill disclosure the system prompt lists each non-required skill's name and description only; call this to fetch the complete skill body on demand. Errors if the name is not an assigned skill.
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)` — Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.
- `ci_job_log(job_id, step?)` — Fetch the full log for a GitHub Actions CI job. When CI fails, the activity log tells you the job_id. Call this tool to see the actual error output. Optionally filter to a specific failed step name. If the output is large, use output_view or output_grep to navigate it.
- `github_search(query, language?, path?, repo?)` — Search GitHub code across public repositories using the GitHub Code Search API. Returns compact, navigable matches with snippets, file paths, URLs, and metadata. Each result has a result_id for reference. Use github_fetch_file to inspect the full file of a promising result.
- `output_view(tool_use_id, limit?, offset?)` — Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.
- `output_grep(pattern, tool_use_id, context_lines?)` — Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.
- `write(content, path)` — Write content to a file, creating it or overwriting if it exists. Path must be within the task worktree.
- `edit(new_text, old_text, path)` — Edit a file by replacing exact text. Finds old_text and replaces with new_text. Fails if old_text is not found or is ambiguous (appears multiple times).
- `task_create(acceptance_criteria, epic_id, title, blocked_by?, description?, design?, issue_type?, labels?, owner?, parent_id?, priority?, status?)` — Create a new task under an epic. Agents should use this only when explicitly allowed by their role and task design.
- `task_update(id, acceptance_criteria?, blocked_by_add?, blocked_by_remove?, description?, design?, epic_id?, memory_refs_add?, memory_refs_remove?, owner?, priority?, status?, title?)` — Update task fields and manage blocker relationships. Use blocked_by_add/blocked_by_remove to enforce task sequencing — a task with unresolved blockers will not be dispatched.
- `task_blocked_list(id)` — List tasks that are blocked by the given task. Use before decomposing to check downstream dependents.
- `epic_show(id)` — Show details for an epic by UUID or short ID.
- `epic_update(id, blocked_by_add?, blocked_by_remove?, description?, memory_refs_add?, memory_refs_remove?, status?, title?)` — Update epic fields (title/description/status), memory ref deltas, and epic dependencies (blocked_by) for planner workflows.
- `epic_tasks(id, limit?, offset?)` — List tasks for an epic with pagination.
- `epic_close(id)` — Close an epic. Use when all work is complete and no further waves are needed.
- `epic_create(title, auto_breakdown?, blocked_by?, description?, memory_refs?, project?, proposal_id?, read_sources?)` — Create a new epic (top-level grouping entity). Use to open a new strategic thread of work — e.g. when decomposing a graduated proposal (Planner Mode D) or when a health sweep identifies a gap that needs its own delivery container. Returns the created epic.
- `proposal_show(id)` — Show a graduated proposal's spec for decomposition (Planner Mode D): title, body, status, acceptance_criteria, and targets (each with project slug + role of `primary`/`reference`). Use this first when dispatched on an `epic_breakdown` task.
- `proposal_ac_set(acceptance_criteria, id)` — Reconcile a proposal's acceptance-criteria `met` flags (Planner Workflow E) as graduated epics land. Send the FULL list in order — one entry per criterion, each `{"met": true|false}` (criterion text is preserved automatically). A status annotation only: it does not edit the spec, bump a revision, or clear sign-offs. Returns {met, total}.
- `proposal_ac_amend(amendments, id, reason)` — Amend a proposal's acceptance-criteria spec with audited revision semantics. Each amendment targets a zero-based criterion index and uses operation `rewrite`, `drop`, or `waive`: rewrite replaces criterion text and requires `criterion`; drop removes the criterion; waive marks it waived. Requires a non-empty top-level reason. This is a real spec edit: it bumps the proposal revision, retains sign-offs, and records feedback/audit. Use proposal_ac_set instead when only reconciling met flags.
- `proposal_complete(id, summary?)` — Mark a `building` proposal as `done` (Planner Workflow E). Call this only after reviewing a proposal whose every graduated epic has closed and confirming the delivered work meets the acceptance criteria. If work remains instead, create more epics with epic_create(proposal_id=...) rather than completing.
- `epic_blockers_list(id)` — List the epics that BLOCK a given epic (its dependencies — they must close before this epic's breakdown auto-dispatches).
- `epic_blocked_list(id)` — List the epics blocked BY a given epic (its dependents — epics whose breakdown waits on this one).
- `task_transition(action, id, reason?, replacement_task_ids?)` — Transition a task using a named workflow action.
- `task_comment_add(body, id)` — Add a comment or strategic observation to a task's activity log.
- `memory_build_context(limit?, min_confidence?, query?, task_id?)` — Build a curated memory context pack for a task or query by combining note retrieval and ranking. Use this before deep analysis to gather relevant project history and decisions.
- `memory_health()` — Returns aggregate health report: total notes, broken link count, orphan note count, duplicate cluster count, low-confidence note count, stale note count, stale notes by folder.
- `memory_extracted_audit()` — Audit existing extracted case/pattern/pitfall notes against ADR-054 taxonomy and required structure. Returns grouped cleanup backlogs for merge candidates, underspecified notes, demotion-to-working-spec candidates, and archive candidates, plus rerun guidance.
- `memory_broken_links(folder?)` — Lists all broken wikilinks with source context (permalink, title, raw text, target permalink).
- `memory_orphans(folder?)` — Lists notes with zero inbound links. Excludes catalogs and singletons (brief, roadmap).
- `memory_write(content, title, type, status?, tags?)` — Create a new memory note. Memory notes live in Dolt — this is the canonical way to author them; do not attempt filesystem writes. `type` is required and routes the note (adr, pattern, case, pitfall, research, requirement, reference, design, tech_spike, session, brief [singleton], roadmap [singleton]). Use [[wikilinks]] in content to connect notes.
- `memory_edit(content, identifier, operation, find_text?, section?, type?)` — Edit an existing memory note in-place. Memory notes live in Dolt — this is the canonical way to amend them; do not attempt filesystem writes. Operations: "append" (add to end), "prepend" (add after frontmatter), "find_replace" (exact text replacement, requires find_text), "replace_section" (replace content under a markdown heading, requires section).
- `agent_metrics(role)` — Show execution quality metrics for a role to support prompt tuning and intervention decisions.
- `agent_create(base_role, name, description?, model_preference?, system_prompt_extensions?)` — Create a new specialist agent extending a base role (worker or reviewer). Use when existing agents lack capabilities for a specific domain.
- `task_delete_branch(id)` — Delete the task's git branch, worktree, and paused session so the next worker starts with a clean slate.
- `task_archive_activity(id)` — Soft-delete all activity entries (comments, session errors, rejections) for a task. The worker on the next attempt will only see post-intervention activity.
- `task_reset_counters(id)` — Reset reopen_count and continuation_count to zero. Use when the task has been meaningfully rescoped and old retry history is no longer relevant.
- `task_kill_session(id)` — Kill the paused worker session and delete its saved conversation. The next dispatch will start a fresh session. Unlike task_delete_branch, this preserves the branch and any committed code.
- `agent_amend_prompt(agent_id, amendment, metrics_snapshot?, project?)` — Append a prompt amendment to a specialist agent role's learned_prompt. The amendment is appended after existing content (never replacing it) and logged to learned_prompt_history. Only applicable to specialist roles (worker, reviewer base_role). Do NOT use on architect, lead, or planner roles.
- `submit_grooming(decision?, summary?, tasks_reviewed?)` — Signal that the grooming session is complete. Report per-task actions taken. Your session ends after this call.
