server/crates/djinn-agent/src/snapshots/djinn_agent__prompts__tests__worker_tools_section_snapshot.snap
---
source: crates/djinn-agent/src/prompts.rs
expression: section
---
- `task_show(id)` — Show details of a work item including recent activity and blockers.
- `task_list(issue_type?, label?, limit?, offset?, parent?, priority?, sort?, status?, text?)` — List tasks with optional filters and pagination.
- `task_activity_list(id, actor_role?, event_type?, limit?)` — Query a task's activity log with optional filters. Returns comments, status transitions, verification results, and other events. Use to inspect Lead guidance, reviewer feedback, or verification history.
- `memory_read(identifier)` — Read a note by permalink or title.
- `memory_search(query, folder?, limit?, task_id?, type?)` — Search notes in project memory.
- `memory_list(depth?, folder?, type?)` — List notes in project memory. Returns compact summaries without full content.
- `shell(command, timeout_ms?)` — Execute shell commands in the task worktree. Commands always run from the worktree root.
- `read(file_path, limit?, offset?, project?)` — Read a file with line numbers and pagination. Rejects binary files. Pass `project` (UUID or owner/repo slug) to read a file from ANOTHER registered repo — served read-only from its default branch (no checkout); omit it to read your task worktree.
- `code_search(query, ignore_case?, max_results?, path?, project?)` — Search code across registered repos with `git grep` (basic regex). Pass `project` (UUID or owner/repo slug) to search one repo, or omit it (or pass "*") to search ALL registered projects at once — e.g. find every caller of a gRPC service org-wide. Served from each repo's default branch (no checkout). For your own task repo's working tree (your uncommitted changes), use shell grep instead.
- `skill_read(name)` — Load the full content of an assigned skill by name. Under progressive skill disclosure the system prompt lists each non-required skill's name and description only; call this to fetch the complete skill body on demand. Errors if the name is not an assigned skill.
- `lsp(file_path, operation, character?, depth?, kind?, line?, name_filter?, symbol?)` — Query the Language Server Protocol for code navigation. Operations: hover (type info at position), definition (go to definition), references (find all references), symbols (list document symbols with optional depth/kind/name filtering). Line and character are 1-based for non-symbol operations.
- `ci_job_log(job_id, step?)` — Fetch the full log for a GitHub Actions CI job. When CI fails, the activity log tells you the job_id. Call this tool to see the actual error output. Optionally filter to a specific failed step name. If the output is large, use output_view or output_grep to navigate it.
- `github_search(query, language?, path?, repo?)` — Search GitHub code across public repositories using the GitHub Code Search API. Returns compact, navigable matches with snippets, file paths, URLs, and metadata. Each result has a result_id for reference. Use github_fetch_file to inspect the full file of a promising result.
- `output_view(tool_use_id, limit?, offset?)` — Paginated view of a truncated tool output. When a tool result was truncated, the full output is stashed and can be browsed here by tool_use_id.
- `output_grep(pattern, tool_use_id, context_lines?)` — Regex search within a truncated tool output. Returns matching lines with context from the full stashed output.
- `write(content, path)` — Write content to a file, creating it or overwriting if it exists. Path must be within the task worktree.
- `edit(new_text, old_text, path)` — Edit a file by replacing exact text. Finds old_text and replaces with new_text. Fails if old_text is not found or is ambiguous (appears multiple times).
- `apply_patch(patch)` — Apply a patch to one or more files using a custom LLM-friendly format. Uses content-based context matching (not line numbers). Format:

*** Begin Patch
*** Update File: path/to/file.rs
@@ context_line_from_file
 context line (unchanged)
-old line to remove
+new line to add
 context line (unchanged)

*** Add File: path/to/new_file.rs
+line 1
+line 2

*** Delete File: path/to/old_file.rs
*** End Patch

Rules: ' ' prefix = context (must match file), '-' = delete, '+' = add. The @@ line text is searched in the file to locate each chunk. Multiple @@ chunks per file are allowed. Files being updated or deleted must be read first.
- `memory_build_context(limit?, min_confidence?, query?, task_id?)` — Build a curated memory context pack for a task or query by combining note retrieval and ranking. Use this before deep analysis to gather relevant project history and decisions.
- `memory_write(content, title, type, status?, tags?)` — Create a new memory note. Memory notes live in Dolt — this is the canonical way to author them; do not attempt filesystem writes. `type` is required and routes the note (adr, pattern, case, pitfall, research, requirement, reference, design, tech_spike, session, brief [singleton], roadmap [singleton]). Use [[wikilinks]] in content to connect notes.
- `memory_edit(content, identifier, operation, find_text?, section?, type?)` — Edit an existing memory note in-place. Memory notes live in Dolt — this is the canonical way to amend them; do not attempt filesystem writes. Operations: "append" (add to end), "prepend" (add after frontmatter), "find_replace" (exact text replacement, requires find_text), "replace_section" (replace content under a markdown heading, requires section).
- `request_lead(id, reason, suggested_breakdown?)` — Request Lead intervention for the current task. Use when the task is too large to complete reliably, the design is ambiguous, or you are stuck. Adds a comment with your reason and suggested breakdown, then escalates to the Lead queue. Your session will effectively end after this call.
- `submit_work(commit_title, summary, task_id, files_changed?, remaining_concerns?)` — Signal that the worker has finished implementing the task. Provide a summary of changes made and list of files modified. Your session ends after this call.
